--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<google-site-verification=XuJ8O7M1p8ZKgnh0QujTnJjMO1P9eirvigomm1WI2Gw>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Beast By Sunny | Elite Body Transformation Coach</title>
