--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<google-site-verification=XuJ8O7M1p8ZKgnh0QujTnJjMO1P9eirvigomm1WI2Gw>
+<<meta name="google-site-verification" content="YOUR_CODE_HERE">
+>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Beast By Sunny | Elite Body Transformation Coach</title>
